# gpg

./: .tags  CMakeLists.txt  CMakeLists_.txt  README.md  package.xml
Grasps/: gpg_grasps.txt  output_quality.txt
cfg/: params.cfg
src/: .tags  .tags1  generate_candidates.cpp  read_obj.cpp  visualizer.cpp
src/gpg/: candidates_generator.cpp  cloud_camera.cpp  plot.cpp
